force-app/main/default/objects/Opportunity/fields/CustoMedioEnergia__c.field-meta.xml
<CustomField>
    <fullName>CustoMedioEnergia__c</fullName>
    <label>Custo Médio Mensal de Energia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>