force-app/main/default/objects/Opportunity/fields/CustoMensalAproximadoBowE__c.field-meta.xml
<CustomField>
    <fullName>CustoMensalAproximadoBowE__c</fullName>
    <label>Custo Mensal Atual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>