force-app/main/default/objects/Opportunity/fields/CustoMensalComDescontoBowE__c.field-meta.xml
<CustomField>
    <fullName>CustoMensalComDescontoBowE__c</fullName>
    <label>Custo Mensal com Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>