force-app/main/default/objects/Opportunity/fields/Custos_adicionais_levantados__c.field-meta.xml
<CustomField>
    <fullName>Custos_adicionais_levantados__c</fullName>
    <label>Custos adicionais levantados:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>