force-app/main/default/objects/Opportunity/fields/DadosInversor__c.field-meta.xml
<CustomField>
    <fullName>DadosInversor__c</fullName>
    <description>campo para definir Dados do inversor.</description>
    <label>Dados do inversor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>