force-app/main/default/objects/Opportunity/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Data</label>
    <type>Date</type>
</CustomField>