force-app/main/default/objects/Opportunity/fields/DataAssinaturaTermoAdesao__c.field-meta.xml
<CustomField>
    <fullName>DataAssinaturaTermoAdesao__c</fullName>
    <label>Data de Assinatura do Termo de Adesão</label>
    <type>Date</type>
</CustomField>