force-app/main/default/objects/Opportunity/fields/DataCerta__c.field-meta.xml
<CustomField>
    <fullName>DataCerta__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Certa</label>
    <type>Date</type>
</CustomField>