force-app/main/default/objects/Opportunity/fields/DataDeCriacao__c.field-meta.xml
<CustomField>
    <fullName>DataDeCriacao__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de Criação</label>
    <type>Date</type>
</CustomField>