force-app/main/default/objects/Opportunity/fields/DataDia__c.field-meta.xml
<CustomField>
    <fullName>DataDia__c</fullName>
    <description>Data de Hoje.</description>
    <formula>TEXT(DAY(   DataCerta__c   ) ) &amp; &quot;/&quot; &amp; TEXT( MONTH(  DataCerta__c ) ) &amp; &quot;/&quot; &amp; TEXT( YEAR(  DataCerta__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data do dia</label>
    <type>Text</type>
</CustomField>