force-app/main/default/objects/Opportunity/fields/DataEncerramentoPagamento__c.field-meta.xml
<CustomField>
    <fullName>DataEncerramentoPagamento__c</fullName>
    <label>Data de Encerramento do Pagamento</label>
    <type>Date</type>
</CustomField>