force-app/main/default/objects/Opportunity/fields/DataEnvioContrato__c.field-meta.xml
<CustomField>
    <fullName>DataEnvioContrato__c</fullName>
    <label>Data de Envio do Contrato</label>
    <type>Date</type>
</CustomField>