force-app/main/default/objects/Opportunity/fields/DataExcedeuSLAContratoEnviado__c.field-meta.xml
<CustomField>
    <fullName>DataExcedeuSLAContratoEnviado__c</fullName>
    <label>Data que Excedeu SLA - Contrato Enviado</label>
    <type>DateTime</type>
</CustomField>