force-app/main/default/objects/Opportunity/fields/DataExcedeuSLAPropostaEnviada__c.field-meta.xml
<CustomField>
    <fullName>DataExcedeuSLAPropostaEnviada__c</fullName>
    <label>Data que Excedeu SLA - Proposta Enviada</label>
    <type>DateTime</type>
</CustomField>