force-app/main/default/objects/Opportunity/fields/DataExcedeuSLAReadequacaoDeProposta__c.field-meta.xml
<CustomField>
    <fullName>DataExcedeuSLAReadequacaoDeProposta__c</fullName>
    <label>Data que Excedeu SLA - Readequação</label>
    <type>DateTime</type>
</CustomField>