force-app/main/default/objects/Opportunity/fields/DataHoraAgendamento__c.field-meta.xml
<CustomField>
    <fullName>DataHoraAgendamento__c</fullName>
    <label>Data/Hora do Agendamento</label>
    <type>DateTime</type>
</CustomField>