force-app/main/default/objects/Opportunity/fields/DataHoraEnvioContrato__c.field-meta.xml
<CustomField>
    <fullName>DataHoraEnvioContrato__c</fullName>
    <description>Preenchido pela integração com a Nivello.</description>
    <label>Data/Hora de envio do Contrato</label>
    <type>DateTime</type>
</CustomField>