force-app/main/default/objects/Opportunity/fields/DataHoraEnvioPedidoCompraVenda__c.field-meta.xml
<CustomField>
    <fullName>DataHoraEnvioPedidoCompraVenda__c</fullName>
    <description>É preenchido pela integração com o SAP, criação de pedido de compra e de venda.</description>
    <inlineHelpText>É preenchido pela integração com o SAP, gravando o momento em que houve o envio dos pedidos de compra e de venda.</inlineHelpText>
    <label>Data/Hora envio pedido de compra/venda</label>
    <type>DateTime</type>
</CustomField>