force-app/main/default/objects/Opportunity/fields/DataLiberacao_AceiteProvisorio__c.field-meta.xml
<CustomField>
    <fullName>DataLiberacao_AceiteProvisorio__c</fullName>
    <label>Data Liberação (Aceite Provisório)</label>
    <type>Date</type>
</CustomField>