force-app/main/default/objects/Opportunity/fields/DataLiberacao_ConclusaoObra__c.field-meta.xml
<CustomField>
    <fullName>DataLiberacao_ConclusaoObra__c</fullName>
    <label>Data Liberação (Conclusão Obra)</label>
    <type>Date</type>
</CustomField>