force-app/main/default/objects/Opportunity/fields/DataLiberacao_ProjetoAprovado__c.field-meta.xml
<CustomField>
    <fullName>DataLiberacao_ProjetoAprovado__c</fullName>
    <label>Data Liberação (Projeto Aprovado)</label>
    <type>Date</type>
</CustomField>