force-app/main/default/objects/Opportunity/fields/DataPagamento1Parcela__c.field-meta.xml
<CustomField>
    <fullName>DataPagamento1Parcela__c</fullName>
    <label>Data de Pagamento - 1° Parcela</label>
    <type>Date</type>
</CustomField>