force-app/main/default/objects/Opportunity/fields/DataPagamento2Parcela__c.field-meta.xml
<CustomField>
    <fullName>DataPagamento2Parcela__c</fullName>
    <label>Data Inicio de Pagamento - 2° Parcela</label>
    <type>Date</type>
</CustomField>