force-app/main/default/objects/Opportunity/fields/DataPagamentoComissaoConsultor_PosStartu__c.field-meta.xml
<CustomField>
    <fullName>DataPagamentoComissaoConsultor_PosStartu__c</fullName>
    <label>Data Pagamento Comissão (Pós Startup)</label>
    <type>Date</type>
</CustomField>