force-app/main/default/objects/Opportunity/fields/DataPagamentoComissaoConsultor_PosVT__c.field-meta.xml
<CustomField>
    <fullName>DataPagamentoComissaoConsultor_PosVT__c</fullName>
    <label>Data Pagamento Comissão (Pós VT)</label>
    <type>Date</type>
</CustomField>