force-app/main/default/objects/Opportunity/fields/DataPrimeiraLigacao__c.field-meta.xml
<CustomField>
    <fullName>DataPrimeiraLigacao__c</fullName>
    <label>Data Primeira Ligação</label>
    <type>DateTime</type>
</CustomField>