force-app/main/default/objects/Opportunity/fields/DataRecebimento1Parcela__c.field-meta.xml
<CustomField>
    <fullName>DataRecebimento1Parcela__c</fullName>
    <label>Data de Recebimento - 1° Parcela</label>
    <type>Date</type>
</CustomField>