force-app/main/default/objects/Opportunity/fields/DataRecebimento2Parcela__c.field-meta.xml
<CustomField>
    <fullName>DataRecebimento2Parcela__c</fullName>
    <label>Data de Recebimento - 2° Parcela</label>
    <type>Date</type>
</CustomField>