force-app/main/default/objects/Opportunity/fields/DataRecebimento_AceiteProvisorio__c.field-meta.xml
<CustomField>
    <fullName>DataRecebimento_AceiteProvisorio__c</fullName>
    <label>Data Recebimento (Aceite Provisório)</label>
    <type>Date</type>
</CustomField>