force-app/main/default/objects/Opportunity/fields/DataRecebimento_ConclusaoObra__c.field-meta.xml
<CustomField>
    <fullName>DataRecebimento_ConclusaoObra__c</fullName>
    <label>Data Recebimento (Conclusão Obra)</label>
    <type>Date</type>
</CustomField>