force-app/main/default/objects/Opportunity/fields/DataRecebimento_ProjetoAprovado__c.field-meta.xml
<CustomField>
    <fullName>DataRecebimento_ProjetoAprovado__c</fullName>
    <label>Data Recebimento (Projeto Aprovado)</label>
    <type>Date</type>
</CustomField>