force-app/main/default/objects/Opportunity/fields/DataRecebimentoDaREVO_PosStartup__c.field-meta.xml
<CustomField>
    <fullName>DataRecebimentoDaREVO_PosStartup__c</fullName>
    <label>Data Recebimento da REVO (Pós Startup)</label>
    <type>Date</type>
</CustomField>