force-app/main/default/objects/Opportunity/fields/DataRecebimentoDaREVO_PosVT__c.field-meta.xml
<CustomField>
    <fullName>DataRecebimentoDaREVO_PosVT__c</fullName>
    <label>Data Recebimento da REVO (Pós VT)</label>
    <type>Date</type>
</CustomField>