force-app/main/default/objects/Opportunity/fields/DataValidacaoClientePelaBowe__c.field-meta.xml
<CustomField>
    <fullName>DataValidacaoClientePelaBowe__c</fullName>
    <label>Data de Validação de Cliente pela Bow-e</label>
    <type>Date</type>
</CustomField>