force-app/main/default/objects/Opportunity/fields/DegradacoesProducao__c.field-meta.xml
<CustomField>
    <fullName>DegradacoesProducao__c</fullName>
    <label>Degradações de Produção</label>
    <type>TextArea</type>
</CustomField>