force-app/main/default/objects/Opportunity/fields/DemandaContratadaForaPonta__c.field-meta.xml
<CustomField>
    <fullName>DemandaContratadaForaPonta__c</fullName>
    <description>Campo para definir a demanda contratada.</description>
    <label>Demanda Contratada - Fora Ponta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>