force-app/main/default/objects/Opportunity/fields/DemandaContratadaPonta__c.field-meta.xml
<CustomField>
    <fullName>DemandaContratadaPonta__c</fullName>
    <description>Campo para definir a demanda contratada ponta.</description>
    <label>Demanda Contratada - Ponta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>