force-app/main/default/objects/Opportunity/fields/DescontoBandeiraAmarela__c.field-meta.xml
<CustomField>
    <fullName>DescontoBandeiraAmarela__c</fullName>
    <label>Desconto Bandeira Amarela (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>