force-app/main/default/objects/Opportunity/fields/DescontoBandeiraVerde__c.field-meta.xml
<CustomField>
    <fullName>DescontoBandeiraVerde__c</fullName>
    <label>Desconto Bandeira Verde (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>