force-app/main/default/objects/Opportunity/fields/DescontoBandeiraVermelha__c.field-meta.xml
<CustomField>
    <fullName>DescontoBandeiraVermelha__c</fullName>
    <label>Desconto Bandeira Vermelha (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>