force-app/main/default/objects/Opportunity/fields/DescontoBaseUFV__c.field-meta.xml
<CustomField>
    <fullName>DescontoBaseUFV__c</fullName>
    <description>Campo para definição de Desconto Base UFV.</description>
    <label>Desconto Base UFV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>