force-app/main/default/objects/Opportunity/fields/DescontoFixoBowE__c.field-meta.xml
<CustomField>
    <fullName>DescontoFixoBowE__c</fullName>
    <label>Desconto Fixo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>