force-app/main/default/objects/Opportunity/fields/DescontoMedio30Anos__c.field-meta.xml
<CustomField>
    <fullName>DescontoMedio30Anos__c</fullName>
    <label>Desconto Médio 30 anos (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>