force-app/main/default/objects/Opportunity/fields/DescontoPromocional__c.field-meta.xml
<CustomField>
    <fullName>DescontoPromocional__c</fullName>
    <label>Desconto Promocional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>