force-app/main/default/objects/Opportunity/fields/DescontoUFV__c.field-meta.xml
<CustomField>
    <fullName>DescontoUFV__c</fullName>
    <label>R$ Desconto UFV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>