force-app/main/default/objects/Opportunity/fields/DescricaoBateria__c.field-meta.xml
<CustomField>
    <fullName>DescricaoBateria__c</fullName>
    <description>Descrição da bateria para exibição em propostas.</description>
    <label>Descrição da Bateria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>