force-app/main/default/objects/Opportunity/fields/DescricaoMotivoPerda__c.field-meta.xml
<CustomField>
    <fullName>DescricaoMotivoPerda__c</fullName>
    <label>Descrição do Motivo da Perda</label>
    <type>TextArea</type>
</CustomField>