force-app/main/default/objects/Opportunity/fields/DiasUteisDesdeEnvioContrato__c.field-meta.xml
<CustomField>
    <fullName>DiasUteisDesdeEnvioContrato__c</fullName>
    <formula>IF(AND((5 - (CASE(MOD( DataEnvioContrato__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD(  TODAY() - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ),
((( TODAY() -   DataEnvioContrato__c) + 1) &lt; 7)),
((CASE(MOD(  TODAY() - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD(  DataEnvioContrato__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))),
(((FLOOR((( TODAY() -  DataEnvioContrato__c ) - (CASE(MOD(  DataEnvioContrato__c - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) +
(CASE(MOD(  DataEnvioContrato__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) +
(CASE(MOD(  TODAY() - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias úteis desde envio do Contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>