force-app/main/default/objects/Opportunity/fields/Direct__c.field-meta.xml
<CustomField>
    <fullName>Direct__c</fullName>
    <description>Campo para definição de Direct.</description>
    <label>Direct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>