force-app/main/default/objects/Opportunity/fields/DirectOriginal__c.field-meta.xml
<CustomField>
    <fullName>DirectOriginal__c</fullName>
    <label>Direct Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>