force-app/main/default/objects/Opportunity/fields/DiscountLoyalty__c.field-meta.xml
<CustomField>
    <fullName>DiscountLoyalty__c</fullName>
    <label>Discount Loyalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>