force-app/main/default/objects/Opportunity/fields/DiscountLoyaltyAdditional__c.field-meta.xml
<CustomField>
    <fullName>DiscountLoyaltyAdditional__c</fullName>
    <label>Desconto Fidelidade Adicional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>