force-app/main/default/objects/Opportunity/fields/DiscountLoyaltyQtdAdditional__c.field-meta.xml
<CustomField>
    <fullName>DiscountLoyaltyQtdAdditional__c</fullName>
    <label>Desconto Fidelidade Adicional Quantidade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>