force-app/main/default/objects/Opportunity/fields/DiscountNotLoyalty__c.field-meta.xml
<CustomField>
    <fullName>DiscountNotLoyalty__c</fullName>
    <label>Discount Not Loyalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>