force-app/main/default/objects/Opportunity/fields/Distribuidora__c.field-meta.xml
<CustomField>
    <fullName>Distribuidora__c</fullName>
    <label>Distribuidora</label>
    <length>40</length>
    <type>Text</type>
</CustomField>