force-app/main/default/objects/Opportunity/fields/DivisorBDI__c.field-meta.xml
<CustomField>
    <fullName>DivisorBDI__c</fullName>
    <label>DivisorBDI</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>