force-app/main/default/objects/Opportunity/fields/DivisorRede__c.field-meta.xml
<CustomField>
    <fullName>DivisorRede__c</fullName>
    <label>DivisorRede</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>