force-app/main/default/objects/Opportunity/fields/Dt_Encerramento_2_Parc_Recorr_ncia__c.field-meta.xml
<CustomField>
    <fullName>Dt_Encerramento_2_Parc_Recorr_ncia__c</fullName>
    <formula>ADDMONTHS(DataPagamento2Parcela__c, 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Encerramento - 2°Parc (Recorrência)</label>
    <type>Date</type>
</CustomField>