force-app/main/default/objects/Opportunity/fields/Duracao_estimada_da_visita_em_minutos__c.field-meta.xml
<CustomField>
    <fullName>Duracao_estimada_da_visita_em_minutos__c</fullName>
    <label>Duração estimada da visita (em minutos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>