force-app/main/default/objects/Opportunity/fields/EconomiaAcumulada__c.field-meta.xml
<CustomField>
    <fullName>EconomiaAcumulada__c</fullName>
    <label>Economia acumulada em 25 anos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>