force-app/main/default/objects/Opportunity/fields/EconomiaAnual__c.field-meta.xml
<CustomField>
    <fullName>EconomiaAnual__c</fullName>
    <label>Economia Anual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>