force-app/main/default/objects/Opportunity/fields/EconomiaAnualEstimada__c.field-meta.xml
<CustomField>
    <fullName>EconomiaAnualEstimada__c</fullName>
    <label>Economia anual estimada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>