force-app/main/default/objects/Opportunity/fields/EconomiaFixa__c.field-meta.xml
<CustomField>
    <fullName>EconomiaFixa__c</fullName>
    <label>Economia Fixa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>