force-app/main/default/objects/Opportunity/fields/EconomiaMensalEstimada__c.field-meta.xml
<CustomField>
    <fullName>EconomiaMensalEstimada__c</fullName>
    <label>Economia mensal estimada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>