force-app/main/default/objects/Opportunity/fields/EconomiaPromocional__c.field-meta.xml
<CustomField>
    <fullName>EconomiaPromocional__c</fullName>
    <label>Economia Promocional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>