force-app/main/default/objects/Opportunity/fields/EconomiaXMesesFixa__c.field-meta.xml
<CustomField>
    <fullName>EconomiaXMesesFixa__c</fullName>
    <label>Economia 11 Meses Fixa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>