force-app/main/default/objects/Opportunity/fields/EconomiaXMesesPromocional__c.field-meta.xml
<CustomField>
    <fullName>EconomiaXMesesPromocional__c</fullName>
    <label>Economia 1 Mês Promocional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>