force-app/main/default/objects/Opportunity/fields/Em_validacao_condicao_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Em_validacao_condicao_pagamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Em validação da condição de pagamento</label>
    <type>Checkbox</type>
</CustomField>