force-app/main/default/objects/Opportunity/fields/EmailDoDevedor__c.field-meta.xml
<CustomField>
    <fullName>EmailDoDevedor__c</fullName>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>