force-app/main/default/objects/Opportunity/fields/EmailDoProprietario__c.field-meta.xml
<CustomField>
    <fullName>EmailDoProprietario__c</fullName>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>