force-app/main/default/objects/Opportunity/fields/EmailDoResponsavel__c.field-meta.xml
<CustomField>
    <fullName>EmailDoResponsavel__c</fullName>
    <label>Email Do Responsavel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>