force-app/main/default/objects/Opportunity/fields/EmpresaDistribuicaoEnergia__c.field-meta.xml
<CustomField>
    <fullName>EmpresaDistribuicaoEnergia__c</fullName>
    <label>Empresa de Distribuição de Energia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>