force-app/main/default/objects/Opportunity/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <label>Endereço</label>
    <type>TextArea</type>
</CustomField>