force-app/main/default/objects/Opportunity/fields/EnderecoConta__c.field-meta.xml
<CustomField>
    <fullName>EnderecoConta__c</fullName>
    <formula>Account.BillingStreet +&apos;, &apos;+Account.BillingCity +&apos;, &apos;+ Account.BillingState +&apos;, &apos;+ Account.BillingPostalCode +&apos;. &apos;</formula>
    <label>Endereço da Conta</label>
    <type>Text</type>
</CustomField>