force-app/main/default/objects/Opportunity/fields/EnderecoOportunidade__c.field-meta.xml
<CustomField>
    <fullName>EnderecoOportunidade__c</fullName>
    <description>campo para concatenar o endereço de Opp.</description>
    <formula>Logradouro__c +&quot;, &quot;+ Complemento__c+&quot;, &quot;+ Bairro__c +&quot;, &quot;+ CEP__c +&quot;, &quot;+ MunicipioInstalacao__c +&quot;. &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço de Oportunidade</label>
    <type>Text</type>
</CustomField>