force-app/main/default/objects/Opportunity/fields/EnquadramentoGD__c.field-meta.xml
<CustomField>
    <fullName>EnquadramentoGD__c</fullName>
    <description>Campo para definir o enquadramento da GD.</description>
    <label>Enquadramento da GD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Microgeração</fullName>
            </value>
            <value>
                <fullName>Minigeração</fullName>
            </value>
            <value>
                <fullName>Off-Grid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>