force-app/main/default/objects/Opportunity/fields/Equipe_Propria_ou_Terceira__c.field-meta.xml
<CustomField>
    <fullName>Equipe_Propria_ou_Terceira__c</fullName>
    <label>Equipe própria ou Terceira?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrador</fullName>
            </value>
            <value>
                <fullName>Enerzee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>