force-app/main/default/objects/Opportunity/fields/ErroIntegracaoRevo__c.field-meta.xml
<CustomField>
    <fullName>ErroIntegracaoRevo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erro Integração REVO</label>
    <type>Checkbox</type>
</CustomField>