force-app/main/default/objects/Opportunity/fields/EstadoDoDevedor__c.field-meta.xml
<CustomField>
    <fullName>EstadoDoDevedor__c</fullName>
    <label>Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>