force-app/main/default/objects/Opportunity/fields/EstadoDoProprietario__c.field-meta.xml
<CustomField>
    <fullName>EstadoDoProprietario__c</fullName>
    <label>Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>