force-app/main/default/objects/Opportunity/fields/EstadoInstalacao__c.field-meta.xml
<CustomField>
    <fullName>EstadoInstalacao__c</fullName>
    <description>Campo para definição de Estado da Oportunidade.</description>
    <label>Estado Instalação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acre</fullName>
            </value>
            <value>
                <fullName>Alagoas</fullName>
            </value>
            <value>
                <fullName>Amapá</fullName>
            </value>
            <value>
                <fullName>Amazonas</fullName>
            </value>
            <value>
                <fullName>Bahia</fullName>
            </value>
            <value>
                <fullName>Ceará</fullName>
            </value>
            <value>
                <fullName>Distrito Federal</fullName>
            </value>
            <value>
                <fullName>Espírito Santo</fullName>
            </value>
            <value>
                <fullName>Goiás</fullName>
            </value>
            <value>
                <fullName>Maranhão</fullName>
            </value>
            <value>
                <fullName>Mato Grosso</fullName>
            </value>
            <value>
                <fullName>Mato Grosso do Sul</fullName>
            </value>
            <value>
                <fullName>Minas Gerais</fullName>
            </value>
            <value>
                <fullName>Pará</fullName>
            </value>
            <value>
                <fullName>Paraíba</fullName>
            </value>
            <value>
                <fullName>Paraná</fullName>
            </value>
            <value>
                <fullName>Pernambuco</fullName>
            </value>
            <value>
                <fullName>Piauí</fullName>
            </value>
            <value>
                <fullName>Rio de Janeiro</fullName>
            </value>
            <value>
                <fullName>Rio Grande do Norte</fullName>
            </value>
            <value>
                <fullName>Rio Grande do Sul</fullName>
            </value>
            <value>
                <fullName>Rondônia</fullName>
            </value>
            <value>
                <fullName>Roraima</fullName>
            </value>
            <value>
                <fullName>Santa Catarina</fullName>
            </value>
            <value>
                <fullName>São Paulo</fullName>
            </value>
            <value>
                <fullName>Sergipe</fullName>
            </value>
            <value>
                <fullName>Tocantins</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>