force-app/main/default/objects/Opportunity/fields/Estrutura_de_fixacao_verificado_in_loco__c.field-meta.xml
<CustomField>
    <fullName>Estrutura_de_fixacao_verificado_in_loco__c</fullName>
    <label>Estrutura de fixação (verificado in loco</label>
    <type>TextArea</type>
</CustomField>