force-app/main/default/objects/Opportunity/fields/EtapaViabilidade__c.field-meta.xml
<CustomField>
    <fullName>EtapaViabilidade__c</fullName>
    <description>Etapa atual de viabilidade da Oportunidade.</description>
    <label>Etapa da Viabilidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agendamento</fullName>
            </value>
            <value>
                <fullName>Visita</fullName>
            </value>
            <value>
                <fullName>Estudo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>