force-app/main/default/objects/Opportunity/fields/ExcedeuSLAContratoEnviado__c.field-meta.xml
<CustomField>
    <fullName>ExcedeuSLAContratoEnviado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excedeu SLA (Contrato Enviado)</label>
    <type>Checkbox</type>
</CustomField>