force-app/main/default/objects/Opportunity/fields/ExcedeuSLAPropostaEnviada__c.field-meta.xml
<CustomField>
    <fullName>ExcedeuSLAPropostaEnviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excedeu SLA (Proposta Enviada)</label>
    <type>Checkbox</type>
</CustomField>