force-app/main/default/objects/Opportunity/fields/ExcedeuSLAReadequacaoDeProposta__c.field-meta.xml
<CustomField>
    <fullName>ExcedeuSLAReadequacaoDeProposta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excedeu SLA (Readequação)</label>
    <type>Checkbox</type>
</CustomField>