force-app/main/default/objects/Opportunity/fields/Exclusoes__c.field-meta.xml
<CustomField>
    <fullName>Exclusoes__c</fullName>
    <description>Itens excluídos do valor de investimento total da proposta.</description>
    <label>Exclusões</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>