force-app/main/default/objects/Opportunity/fields/FabricanteInversor__c.field-meta.xml
<CustomField>
    <fullName>FabricanteInversor__c</fullName>
    <label>Fabricante Inversor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>