force-app/main/default/objects/Opportunity/fields/FabricanteModulos__c.field-meta.xml
<CustomField>
    <fullName>FabricanteModulos__c</fullName>
    <description>Campo para definir o fabricante.</description>
    <label>Fabricante Módulos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>