force-app/main/default/objects/Opportunity/fields/FaseAlterada__c.field-meta.xml
<CustomField>
    <fullName>FaseAlterada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para ser atualizado no processo de aprovação e utilizado para regra de validação da mudança de fase somente se oportunidade aprovada.</description>
    <label>Fase alterada?</label>
    <type>Checkbox</type>
</CustomField>