force-app/main/default/objects/Opportunity/fields/FaturaDescontoFixo__c.field-meta.xml
<CustomField>
    <fullName>FaturaDescontoFixo__c</fullName>
    <label>Fatura Desconto Fixo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>