force-app/main/default/objects/Opportunity/fields/FaturaDescontoPromocional__c.field-meta.xml
<CustomField>
    <fullName>FaturaDescontoPromocional__c</fullName>
    <label>Fatura Desconto Promocional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>