force-app/main/default/objects/Opportunity/fields/FaturaUltimosDoisMeses__c.field-meta.xml
<CustomField>
    <fullName>FaturaUltimosDoisMeses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fatura Env. Ref. Ult. Dois Meses ?</label>
    <type>Checkbox</type>
</CustomField>