force-app/main/default/objects/Opportunity/fields/Financiamento_solicitado__c.field-meta.xml
<CustomField>
    <fullName>Financiamento_solicitado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitação de Financiamento Solicitada</label>
    <type>Checkbox</type>
</CustomField>