force-app/main/default/objects/Opportunity/fields/FinancingProcessDetails__c.field-meta.xml
<CustomField>
    <fullName>FinancingProcessDetails__c</fullName>
    <label>Detalhes do Processo de Financiamento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>