force-app/main/default/objects/Opportunity/fields/ForcaMaximaSistema__c.field-meta.xml
<CustomField>
    <fullName>ForcaMaximaSistema__c</fullName>
    <label>Força Máxima do Sistema</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>