force-app/main/default/objects/Opportunity/fields/FormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>FormaPagamento__c</fullName>
    <label>Forma de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REC CARTAO</fullName>
                <label>Cartão de crédito</label>
            </value>
            <value>
                <fullName>REC FINANCIAMEN</fullName>
                <label>Financiamento</label>
            </value>
            <value>
                <fullName>R001</fullName>
                <label>Boleto</label>
            </value>
            <value>
                <fullName>R0002</fullName>
                <label>Transferencia PIX</label>
            </value>
            <value>
                <fullName>Negociação</fullName>
            </value>
            <value>
                <fullName>Ezee Solar Aluguel</fullName>
            </value>
            <value>
                <fullName>Cartão de débito</fullName>
                <isActive>false</isActive>
                <label>Cartão de débito</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>