force-app/main/default/objects/Opportunity/fields/Geracao_anual_Solergo__c.field-meta.xml
<CustomField>
    <fullName>Geracao_anual_Solergo__c</fullName>
    <label>Geração anual Solergo:</label>
    <type>TextArea</type>
</CustomField>